
plugins {
    id 'application'
}

repositories {
    mavenCentral()
    google()
}

def recordBuilderVersion = "42"

dependencies {
    implementation 'io.github.jwharm.javagi:gtk:0.10.2'
    implementation 'io.github.jwharm.javagi:adw:0.10.2'
    implementation 'io.github.jwharm.javagi:gst:0.10.2'

    implementation 'net.beardbot:subsonic-client:0.5.1'
    implementation 'io.github.cdimascio:dotenv-java:3.0.0'
    implementation "com.github.ben-manes.caffeine:caffeine:3.1.8"
    implementation 'com.squareup.okhttp3:okhttp:4.12.0'

    annotationProcessor "io.soabase.record-builder:record-builder-processor:$recordBuilderVersion"
    compileOnly "io.soabase.record-builder:record-builder-core:$recordBuilderVersion"

    implementation 'org.slf4j:slf4j-api:2.0.12'
    implementation 'org.slf4j:jul-to-slf4j:2.0.12'
    implementation 'ch.qos.logback:logback-classic:1.5.6'

    implementation 'com.twelvemonkeys.imageio:imageio-core:3.11.0'
    implementation 'com.twelvemonkeys.imageio:imageio-metadata:3.11.0'
    // webp conversion support:
    implementation 'com.twelvemonkeys.imageio:imageio-webp:3.11.0'

    testImplementation 'org.assertj:assertj-core:3.25.1'
    testImplementation 'junit:junit:4.13.1'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(22)
    }
}

tasks.named('run') {
    //jvmArgs += "-XstartOnFirstThread"
    jvmArgs += "--enable-native-access=ALL-UNNAMED"
    jvmArgs += "-Djava.library.path=/usr/lib64:/lib64:/lib:/usr/lib:/lib/x86_64-linux-gnu "
    //jvmArgs += "-Djava.library.path=/usr/lib64:/lib64:/lib:/usr/lib:/lib/x86_64-linux-gnu:/opt/homebrew/lib "
}

application {
    mainClass = "io.github.jwharm.javagi.examples.playsound.Main"
}

